Add fuckers and env

--- a/test/test1.html
+++ b/test/test1.html
@@ -424,7 +424,7 @@
     </div>
     <script src="../dist/fuckitup.js"></script>
       <script>
-        window.fucker = new FuckItUp()
+        window.fucker = new FuckItUp(3)
         fucker.init()
       </script>
   </body>
