--- a/test/test1.html
+++ b/test/test1.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 Test Page</title>
+    <link rel="stylesheet" href="../dist/fuckitup.css"></link>
   </head>
   <body>
     <div id="top" class="page" role="document">
