--- a/test/test1.html
+++ b/test/test1.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../dist/fuckitup.css"></link>
   </head>
   <body>
+    <script>var object = {asdsadsadsadsad: "asdsadsadsadsadsad"};</script>
     <div id="top" class="page" role="document">
       <header role="banner">
         <h1>HTML5 Test Page</h1>
